2013-07-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/api_checker.php: a tiny extension to make more easy
	the checks in the api, it is a early version but works.

2013-07-29  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.main.php
	godmode/reporting/reporting_builder.php: Added the report
	group to the group combo in the main edition screen of this
	report when the user hasnt permissions on this groups but
	this report have special permissions to edit by this group
	bug: #2362

	Fix a header layout in reports edit view when only have permission
	to edit extrapermission reports

2013-07-28  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_field_match_snmp.php: Translated.

2013-07-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/networkmap.dinamic.php: added default zoom
	buttom.
	
	* images/zoom_default.svg: the default buttom.

2013-07-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_networkmap.php,
	operation/agentes/networkmap.dinamic.php: added the tooltips and
	only it needs reorganize the code.

2013-07-26  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/reporting_builder.php: Fix errors
	on reports edition

2013-07-26  Sergio Martin <sergio.martin@artica.es>

	* include/functions_filemanager.php: Fixed file manager
	in metaconsole for bug #2361 and more little aesthetic fixes

2013-07-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/d3.v3.js: removed some changes.
	
	* include/functions_networkmap.php,
	operation/agentes/networkmap.dinamic.php,
	operation/agentes/networkmap.php: first version of dinamic view
	for networkmap. It needs implement tooltip and of course fix
	the new bugs.

2013-07-25  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/configure_alert_template.php: Fix alert
	template hint javascript problem for bug #2357

	* godmode/massive/massive_edit_modules.php: Change 
	help tip to clarify user experience
